# sph-solver

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/sph/: kernels.hpp  particle.hpp  render.cpp  render.hpp  solver.cpp  solver.hpp  spatial_hash_grid.cpp  spatial_hash_grid.h  time_manager.hpp
src/sph/math/: vec2.hpp
